2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Added control program glassplayerhost(1) in
	'src/glassplayercontrol/'.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Added web integration in 'src/web/'.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Added 'helpers/jsmin.c'.
	* Added a 'make embed' target.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Added GlassPlayer to 'glassplayerhost-embed.spec'.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make fastembed' target.