@@ -5,10 +5,10 @@ Summary:	Embedded audio stream player
 Group:		Applications/Productivity
 License:	GPLv2
 Source: 	%{name}-%{version}.tar.gz
-Source1:        fdk-aac-0.1.4-1.el7.centos.x86_64.rpm
-Source2:        libmad-0.15.1b-5.el7.centos.x86_64.rpm
-Source3:        glassplayer-0.6.1-1.el7.centos.x86_64.rpm
-Source4:        webhost-0.8.2-1.el7.centos.x86_64.rpm
+Source1:        fdk-aac-0.1.4-1%{?dist}.%{_arch}.rpm
+Source2:        libmad-0.15.1b-5%{?dist}.%{_arch}.rpm
+Source3:        glassplayer-0.6.1-1%{?dist}.%{_arch}.rpm
+Source4:        webhost-0.8.2-1%{?dist}.%{_arch}.rpm
 BuildRequires:	qt-devel
 BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root
 Requires:       httpd
